add API location

--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
- "name": "backend",
- "version": "1.0.0",
- "description": "",
- "main": "app.js",
- "type": "module",
- "scripts": {
-  "dev": "nodemon src/app.js"
- },
- "author": "",
- "license": "ISC",
- "dependencies": {
-  "bcrypt": "^5.1.0",
-  "cors": "^2.8.5",
-  "dotenv": "^16.1.4",
-  "express": "^4.18.2",
-  "handlebars": "^4.7.7",
-  "jsonwebtoken": "^9.0.0",
-  "mongoose": "^7.2.2",
-  "nodemailer": "^6.9.3",
-  "validator": "^13.9.0"
- },
- "devDependencies": {
-  "nodemon": "^2.0.22"
- },
- "imports": {
-  "#root/*": "./src/*.js"
- },
- "prettier": {
-  "trailingComma": "es5",
-  "tabWidth": 2,
-  "semi": true,
-  "singleQuote": true,
-  "arrowParens": "avoid"
- }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon src/app.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "handlebars": "^4.7.7",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.2",
+    "nodemailer": "^6.9.3",
+    "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "imports": {
+    "#root/*": "./src/*.js"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "arrowParens": "avoid",
+    "printWidth": 120
+  }
 }
