--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
@@ -20,6 +19,7 @@
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
+    "sharp": "^0.32.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
