--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ PASSWORD_TOKEN_EXPIRATION=5m
 EMAIL_USER=travip07@gmail.com
 EMAIL_PASS=sjbigqkfutfkvfhe
 ITEM_OF_PAGE=10
+URL=https://vacation-backend.onrender.com
+MAX_VIEW=10
