add API Notification

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ EMAIL_PASS=sjbigqkfutfkvfhe
 ITEM_OF_PAGE=10
 URL=https://vacation-backend.onrender.com
 MAX_VIEW=10
+MAX_RANGE_NOTI=7*24*60*60*1000
