--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ ITEM_OF_PAGE=10
 URL=https://vacation-backend.onrender.com
 MAX_VIEW=10
 MAX_RANGE_NOTI=7*24*60*60*1000
+MAX_RANGE_ACTIVE_ACCOUNT=30*24*60*60*1000
