--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ EMAIL_PASS=sjbigqkfutfkvfhe
 ITEM_OF_PAGE=10
 URL=https://vacation-backend.onrender.com
 MAX_VIEW=10
+MAX_FILES_UPLOAD=10
 MAX_RANGE_NOTI=7*24*60*60*1000
 MAX_RANGE_ACTIVE_ACCOUNT=30*24*60*60*1000
 
