--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "firebase": "^9.23.0",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
