--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ PASSWORD_TOKEN_EXPIRATION=5m
 EMAIL_USER=travip07@gmail.com
 EMAIL_PASS=sjbigqkfutfkvfhe
 ITEM_OF_PAGE=10
-URL=https://vacation-backend.onrender.com
+URL=https://vacation-social-network.onrender.com
 MAX_VIEW=10
 MAX_FILES_UPLOAD=10
 MAX_RANGE_NOTI=7*24*60*60*1000
